--- a/notebooks/data_preparation.ipynb
+++ b/notebooks/data_preparation.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "0fae75ce",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "e0166a6c",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "f5b03cbb",
    "metadata": {},
    "outputs": [
@@ -141,165 +141,179 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>StudentID</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Ethnicity</th>\n",
-       "      <th>ParentalEducation</th>\n",
-       "      <th>StudyTimeWeekly</th>\n",
-       "      <th>Absences</th>\n",
-       "      <th>Tutoring</th>\n",
-       "      <th>ParentalSupport</th>\n",
-       "      <th>Extracurricular</th>\n",
-       "      <th>Sports</th>\n",
-       "      <th>Music</th>\n",
-       "      <th>Volunteering</th>\n",
-       "      <th>GPA</th>\n",
-       "      <th>GradeClass</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "      <td>2392.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
+       "      <th>StudentID</th>\n",
+       "      <td>2392.0</td>\n",
        "      <td>2196.500000</td>\n",
-       "      <td>16.468645</td>\n",
-       "      <td>0.510870</td>\n",
-       "      <td>0.877508</td>\n",
-       "      <td>1.746237</td>\n",
-       "      <td>9.771992</td>\n",
-       "      <td>14.541388</td>\n",
-       "      <td>0.301421</td>\n",
-       "      <td>2.122074</td>\n",
-       "      <td>0.383361</td>\n",
-       "      <td>0.303512</td>\n",
-       "      <td>0.196906</td>\n",
-       "      <td>0.157191</td>\n",
-       "      <td>1.906186</td>\n",
-       "      <td>2.983696</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
        "      <td>690.655244</td>\n",
-       "      <td>1.123798</td>\n",
-       "      <td>0.499986</td>\n",
-       "      <td>1.028476</td>\n",
-       "      <td>1.000411</td>\n",
-       "      <td>5.652774</td>\n",
-       "      <td>8.467417</td>\n",
-       "      <td>0.458971</td>\n",
-       "      <td>1.122813</td>\n",
-       "      <td>0.486307</td>\n",
-       "      <td>0.459870</td>\n",
-       "      <td>0.397744</td>\n",
-       "      <td>0.364057</td>\n",
-       "      <td>0.915156</td>\n",
-       "      <td>1.233908</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
        "      <td>1001.000000</td>\n",
-       "      <td>15.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.001057</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
        "      <td>1598.750000</td>\n",
-       "      <td>15.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>5.043079</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.174803</td>\n",
-       "      <td>2.000000</td>\n",
+       "      <td>2196.500000</td>\n",
+       "      <td>2794.250000</td>\n",
+       "      <td>3392.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>2196.500000</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>9.705363</td>\n",
+       "      <th>Age</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>16.468645</td>\n",
+       "      <td>1.123798</td>\n",
        "      <td>15.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>0.510870</td>\n",
+       "      <td>0.499986</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ethnicity</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>0.877508</td>\n",
+       "      <td>1.028476</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ParentalEducation</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>1.746237</td>\n",
+       "      <td>1.000411</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.893393</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>4.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>2794.250000</td>\n",
-       "      <td>17.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>2.000000</td>\n",
+       "      <th>StudyTimeWeekly</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>9.771992</td>\n",
+       "      <td>5.652774</td>\n",
+       "      <td>0.001057</td>\n",
+       "      <td>5.043079</td>\n",
+       "      <td>9.705363</td>\n",
        "      <td>14.408410</td>\n",
+       "      <td>19.978094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Absences</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>14.541388</td>\n",
+       "      <td>8.467417</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>15.000000</td>\n",
        "      <td>22.000000</td>\n",
+       "      <td>29.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tutoring</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>0.301421</td>\n",
+       "      <td>0.458971</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ParentalSupport</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>2.122074</td>\n",
+       "      <td>1.122813</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>3.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Extracurricular</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>0.383361</td>\n",
+       "      <td>0.486307</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sports</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>0.303512</td>\n",
+       "      <td>0.459870</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Music</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>0.196906</td>\n",
+       "      <td>0.397744</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Volunteering</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>0.157191</td>\n",
+       "      <td>0.364057</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GPA</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>1.906186</td>\n",
+       "      <td>0.915156</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.174803</td>\n",
+       "      <td>1.893393</td>\n",
        "      <td>2.622216</td>\n",
        "      <td>4.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>3392.000000</td>\n",
-       "      <td>18.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>3.000000</td>\n",
+       "      <th>GradeClass</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>2.983696</td>\n",
+       "      <td>1.233908</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>4.000000</td>\n",
-       "      <td>19.978094</td>\n",
-       "      <td>29.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>4.000000</td>\n",
        "      <td>4.000000</td>\n",
        "    </tr>\n",
@@ -308,54 +322,48 @@
        "</div>"
       ],
       "text/plain": [
-       "         StudentID          Age       Gender    Ethnicity  ParentalEducation  \\\n",
-       "count  2392.000000  2392.000000  2392.000000  2392.000000        2392.000000   \n",
-       "mean   2196.500000    16.468645     0.510870     0.877508           1.746237   \n",
-       "std     690.655244     1.123798     0.499986     1.028476           1.000411   \n",
-       "min    1001.000000    15.000000     0.000000     0.000000           0.000000   \n",
-       "25%    1598.750000    15.000000     0.000000     0.000000           1.000000   \n",
-       "50%    2196.500000    16.000000     1.000000     0.000000           2.000000   \n",
-       "75%    2794.250000    17.000000     1.000000     2.000000           2.000000   \n",
-       "max    3392.000000    18.000000     1.000000     3.000000           4.000000   \n",
+       "                    count         mean         std          min          25%  \\\n",
+       "StudentID          2392.0  2196.500000  690.655244  1001.000000  1598.750000   \n",
+       "Age                2392.0    16.468645    1.123798    15.000000    15.000000   \n",
+       "Gender             2392.0     0.510870    0.499986     0.000000     0.000000   \n",
+       "Ethnicity          2392.0     0.877508    1.028476     0.000000     0.000000   \n",
+       "ParentalEducation  2392.0     1.746237    1.000411     0.000000     1.000000   \n",
+       "StudyTimeWeekly    2392.0     9.771992    5.652774     0.001057     5.043079   \n",
+       "Absences           2392.0    14.541388    8.467417     0.000000     7.000000   \n",
+       "Tutoring           2392.0     0.301421    0.458971     0.000000     0.000000   \n",
+       "ParentalSupport    2392.0     2.122074    1.122813     0.000000     1.000000   \n",
+       "Extracurricular    2392.0     0.383361    0.486307     0.000000     0.000000   \n",
+       "Sports             2392.0     0.303512    0.459870     0.000000     0.000000   \n",
+       "Music              2392.0     0.196906    0.397744     0.000000     0.000000   \n",
+       "Volunteering       2392.0     0.157191    0.364057     0.000000     0.000000   \n",
+       "GPA                2392.0     1.906186    0.915156     0.000000     1.174803   \n",
+       "GradeClass         2392.0     2.983696    1.233908     0.000000     2.000000   \n",
        "\n",
-       "       StudyTimeWeekly     Absences     Tutoring  ParentalSupport  \\\n",
-       "count      2392.000000  2392.000000  2392.000000      2392.000000   \n",
-       "mean          9.771992    14.541388     0.301421         2.122074   \n",
-       "std           5.652774     8.467417     0.458971         1.122813   \n",
-       "min           0.001057     0.000000     0.000000         0.000000   \n",
-       "25%           5.043079     7.000000     0.000000         1.000000   \n",
-       "50%           9.705363    15.000000     0.000000         2.000000   \n",
-       "75%          14.408410    22.000000     1.000000         3.000000   \n",
-       "max          19.978094    29.000000     1.000000         4.000000   \n",
-       "\n",
-       "       Extracurricular       Sports        Music  Volunteering          GPA  \\\n",
-       "count      2392.000000  2392.000000  2392.000000   2392.000000  2392.000000   \n",
-       "mean          0.383361     0.303512     0.196906      0.157191     1.906186   \n",
-       "std           0.486307     0.459870     0.397744      0.364057     0.915156   \n",
-       "min           0.000000     0.000000     0.000000      0.000000     0.000000   \n",
-       "25%           0.000000     0.000000     0.000000      0.000000     1.174803   \n",
-       "50%           0.000000     0.000000     0.000000      0.000000     1.893393   \n",
-       "75%           1.000000     1.000000     0.000000      0.000000     2.622216   \n",
-       "max           1.000000     1.000000     1.000000      1.000000     4.000000   \n",
-       "\n",
-       "        GradeClass  \n",
-       "count  2392.000000  \n",
-       "mean      2.983696  \n",
-       "std       1.233908  \n",
-       "min       0.000000  \n",
-       "25%       2.000000  \n",
-       "50%       4.000000  \n",
-       "75%       4.000000  \n",
-       "max       4.000000  "
+       "                           50%          75%          max  \n",
+       "StudentID          2196.500000  2794.250000  3392.000000  \n",
+       "Age                  16.000000    17.000000    18.000000  \n",
+       "Gender                1.000000     1.000000     1.000000  \n",
+       "Ethnicity             0.000000     2.000000     3.000000  \n",
+       "ParentalEducation     2.000000     2.000000     4.000000  \n",
+       "StudyTimeWeekly       9.705363    14.408410    19.978094  \n",
+       "Absences             15.000000    22.000000    29.000000  \n",
+       "Tutoring              0.000000     1.000000     1.000000  \n",
+       "ParentalSupport       2.000000     3.000000     4.000000  \n",
+       "Extracurricular       0.000000     1.000000     1.000000  \n",
+       "Sports                0.000000     1.000000     1.000000  \n",
+       "Music                 0.000000     0.000000     1.000000  \n",
+       "Volunteering          0.000000     0.000000     1.000000  \n",
+       "GPA                   1.893393     2.622216     4.000000  \n",
+       "GradeClass            4.000000     4.000000     4.000000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.describe()"
+    "data.describe().T"
    ]
   },
   {
