Removed id field in data preparation

--- a/notebooks/data_preparation.ipynb
+++ b/notebooks/data_preparation.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "0fae75ce",
    "metadata": {},
    "outputs": [],
@@ -42,12 +42,13 @@
    "id": "a894a6ba",
    "metadata": {},
    "source": [
-    "### Load Raw Data"
+    "### Load Raw Data\n",
+    "We load the raw dataset from a CSV file and perform initial cleaning by removing the StudentID column. StudentID is a unique identifier that does not provide predictive value for machine learning, as it has no relationship with student performance or other features. Removing it ensures the dataset focuses on meaningful variables from the start."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "e0166a6c",
    "metadata": {},
    "outputs": [
@@ -55,54 +56,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   StudentID  Age  Gender  Ethnicity  ParentalEducation  StudyTimeWeekly  \\\n",
-      "0       1001   17       1          0                  2        19.833723   \n",
-      "1       1002   18       0          0                  1        15.408756   \n",
-      "2       1003   15       0          2                  3         4.210570   \n",
-      "3       1004   17       1          0                  3        10.028829   \n",
-      "4       1005   17       1          0                  2         4.672495   \n",
+      "First few rows after removing StudentID:\n",
+      "   Age  Gender  Ethnicity  ParentalEducation  StudyTimeWeekly  Absences  \\\n",
+      "0   17       1          0                  2        19.833723         7   \n",
+      "1   18       0          0                  1        15.408756         0   \n",
+      "2   15       0          2                  3         4.210570        26   \n",
+      "3   17       1          0                  3        10.028829        14   \n",
+      "4   17       1          0                  2         4.672495        17   \n",
       "\n",
-      "   Absences  Tutoring  ParentalSupport  Extracurricular  Sports  Music  \\\n",
-      "0         7         1                2                0       0      1   \n",
-      "1         0         0                1                0       0      0   \n",
-      "2        26         0                2                0       0      0   \n",
-      "3        14         0                3                1       0      0   \n",
-      "4        17         1                3                0       0      0   \n",
+      "   Tutoring  ParentalSupport  Extracurricular  Sports  Music  Volunteering  \\\n",
+      "0         1                2                0       0      1             0   \n",
+      "1         0                1                0       0      0             0   \n",
+      "2         0                2                0       0      0             0   \n",
+      "3         0                3                1       0      0             0   \n",
+      "4         1                3                0       0      0             0   \n",
       "\n",
-      "   Volunteering       GPA  GradeClass  \n",
-      "0             0  2.929196         2.0  \n",
-      "1             0  3.042915         1.0  \n",
-      "2             0  0.112602         4.0  \n",
-      "3             0  2.054218         3.0  \n",
-      "4             0  1.288061         4.0  \n",
+      "        GPA  GradeClass  \n",
+      "0  2.929196         2.0  \n",
+      "1  3.042915         1.0  \n",
+      "2  0.112602         4.0  \n",
+      "3  2.054218         3.0  \n",
+      "4  1.288061         4.0  \n",
+      "\n",
+      "Dataset info:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2392 entries, 0 to 2391\n",
-      "Data columns (total 15 columns):\n",
+      "Data columns (total 14 columns):\n",
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
-      " 0   StudentID          2392 non-null   int64  \n",
-      " 1   Age                2392 non-null   int64  \n",
-      " 2   Gender             2392 non-null   int64  \n",
-      " 3   Ethnicity          2392 non-null   int64  \n",
-      " 4   ParentalEducation  2392 non-null   int64  \n",
-      " 5   StudyTimeWeekly    2392 non-null   float64\n",
-      " 6   Absences           2392 non-null   int64  \n",
-      " 7   Tutoring           2392 non-null   int64  \n",
-      " 8   ParentalSupport    2392 non-null   int64  \n",
-      " 9   Extracurricular    2392 non-null   int64  \n",
-      " 10  Sports             2392 non-null   int64  \n",
-      " 11  Music              2392 non-null   int64  \n",
-      " 12  Volunteering       2392 non-null   int64  \n",
-      " 13  GPA                2392 non-null   float64\n",
-      " 14  GradeClass         2392 non-null   float64\n",
-      "dtypes: float64(3), int64(12)\n",
-      "memory usage: 280.4 KB\n"
+      " 0   Age                2392 non-null   int64  \n",
+      " 1   Gender             2392 non-null   int64  \n",
+      " 2   Ethnicity          2392 non-null   int64  \n",
+      " 3   ParentalEducation  2392 non-null   int64  \n",
+      " 4   StudyTimeWeekly    2392 non-null   float64\n",
+      " 5   Absences           2392 non-null   int64  \n",
+      " 6   Tutoring           2392 non-null   int64  \n",
+      " 7   ParentalSupport    2392 non-null   int64  \n",
+      " 8   Extracurricular    2392 non-null   int64  \n",
+      " 9   Sports             2392 non-null   int64  \n",
+      " 10  Music              2392 non-null   int64  \n",
+      " 11  Volunteering       2392 non-null   int64  \n",
+      " 12  GPA                2392 non-null   float64\n",
+      " 13  GradeClass         2392 non-null   float64\n",
+      "dtypes: float64(3), int64(11)\n",
+      "memory usage: 261.8 KB\n"
      ]
     }
    ],
    "source": [
+    "# Load the raw dataset\n",
     "data = pd.read_csv(\"../data/raw/student_performance_data.csv\")\n",
+    "\n",
+    "# Remove the StudentID column, as it is a non-predictive unique identifier\n",
+    "data = data.drop(columns=['StudentID'])\n",
+    "\n",
+    "# Display the first few rows and dataset info to verify the change\n",
+    "print(\"First few rows after removing StudentID:\")\n",
     "print(data.head())\n",
+    "print(\"\\nDataset info:\")\n",
     "data.info()"
    ]
   },
