--- a/notebooks/data_preparation.ipynb
+++ b/notebooks/data_preparation.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "f5b03cbb",
    "metadata": {},
    "outputs": [
@@ -163,17 +163,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>StudentID</th>\n",
-       "      <td>2392.0</td>\n",
-       "      <td>2196.500000</td>\n",
-       "      <td>690.655244</td>\n",
-       "      <td>1001.000000</td>\n",
-       "      <td>1598.750000</td>\n",
-       "      <td>2196.500000</td>\n",
-       "      <td>2794.250000</td>\n",
-       "      <td>3392.000000</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>Age</th>\n",
        "      <td>2392.0</td>\n",
@@ -333,48 +322,57 @@
        "</div>"
       ],
       "text/plain": [
-       "                    count         mean         std          min          25%  \\\n",
-       "StudentID          2392.0  2196.500000  690.655244  1001.000000  1598.750000   \n",
-       "Age                2392.0    16.468645    1.123798    15.000000    15.000000   \n",
-       "Gender             2392.0     0.510870    0.499986     0.000000     0.000000   \n",
-       "Ethnicity          2392.0     0.877508    1.028476     0.000000     0.000000   \n",
-       "ParentalEducation  2392.0     1.746237    1.000411     0.000000     1.000000   \n",
-       "StudyTimeWeekly    2392.0     9.771992    5.652774     0.001057     5.043079   \n",
-       "Absences           2392.0    14.541388    8.467417     0.000000     7.000000   \n",
-       "Tutoring           2392.0     0.301421    0.458971     0.000000     0.000000   \n",
-       "ParentalSupport    2392.0     2.122074    1.122813     0.000000     1.000000   \n",
-       "Extracurricular    2392.0     0.383361    0.486307     0.000000     0.000000   \n",
-       "Sports             2392.0     0.303512    0.459870     0.000000     0.000000   \n",
-       "Music              2392.0     0.196906    0.397744     0.000000     0.000000   \n",
-       "Volunteering       2392.0     0.157191    0.364057     0.000000     0.000000   \n",
-       "GPA                2392.0     1.906186    0.915156     0.000000     1.174803   \n",
-       "GradeClass         2392.0     2.983696    1.233908     0.000000     2.000000   \n",
+       "                    count       mean       std        min        25%  \\\n",
+       "Age                2392.0  16.468645  1.123798  15.000000  15.000000   \n",
+       "Gender             2392.0   0.510870  0.499986   0.000000   0.000000   \n",
+       "Ethnicity          2392.0   0.877508  1.028476   0.000000   0.000000   \n",
+       "ParentalEducation  2392.0   1.746237  1.000411   0.000000   1.000000   \n",
+       "StudyTimeWeekly    2392.0   9.771992  5.652774   0.001057   5.043079   \n",
+       "Absences           2392.0  14.541388  8.467417   0.000000   7.000000   \n",
+       "Tutoring           2392.0   0.301421  0.458971   0.000000   0.000000   \n",
+       "ParentalSupport    2392.0   2.122074  1.122813   0.000000   1.000000   \n",
+       "Extracurricular    2392.0   0.383361  0.486307   0.000000   0.000000   \n",
+       "Sports             2392.0   0.303512  0.459870   0.000000   0.000000   \n",
+       "Music              2392.0   0.196906  0.397744   0.000000   0.000000   \n",
+       "Volunteering       2392.0   0.157191  0.364057   0.000000   0.000000   \n",
+       "GPA                2392.0   1.906186  0.915156   0.000000   1.174803   \n",
+       "GradeClass         2392.0   2.983696  1.233908   0.000000   2.000000   \n",
        "\n",
-       "                           50%          75%          max  \n",
-       "StudentID          2196.500000  2794.250000  3392.000000  \n",
-       "Age                  16.000000    17.000000    18.000000  \n",
-       "Gender                1.000000     1.000000     1.000000  \n",
-       "Ethnicity             0.000000     2.000000     3.000000  \n",
-       "ParentalEducation     2.000000     2.000000     4.000000  \n",
-       "StudyTimeWeekly       9.705363    14.408410    19.978094  \n",
-       "Absences             15.000000    22.000000    29.000000  \n",
-       "Tutoring              0.000000     1.000000     1.000000  \n",
-       "ParentalSupport       2.000000     3.000000     4.000000  \n",
-       "Extracurricular       0.000000     1.000000     1.000000  \n",
-       "Sports                0.000000     1.000000     1.000000  \n",
-       "Music                 0.000000     0.000000     1.000000  \n",
-       "Volunteering          0.000000     0.000000     1.000000  \n",
-       "GPA                   1.893393     2.622216     4.000000  \n",
-       "GradeClass            4.000000     4.000000     4.000000  "
+       "                         50%        75%        max  \n",
+       "Age                16.000000  17.000000  18.000000  \n",
+       "Gender              1.000000   1.000000   1.000000  \n",
+       "Ethnicity           0.000000   2.000000   3.000000  \n",
+       "ParentalEducation   2.000000   2.000000   4.000000  \n",
+       "StudyTimeWeekly     9.705363  14.408410  19.978094  \n",
+       "Absences           15.000000  22.000000  29.000000  \n",
+       "Tutoring            0.000000   1.000000   1.000000  \n",
+       "ParentalSupport     2.000000   3.000000   4.000000  \n",
+       "Extracurricular     0.000000   1.000000   1.000000  \n",
+       "Sports              0.000000   1.000000   1.000000  \n",
+       "Music               0.000000   0.000000   1.000000  \n",
+       "Volunteering        0.000000   0.000000   1.000000  \n",
+       "GPA                 1.893393   2.622216   4.000000  \n",
+       "GradeClass          4.000000   4.000000   4.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.describe().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f021532f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the cleaned dataset for future use\n",
+    "data.to_csv(\"../data/processed/cleaned_data.csv\", index=False)"
    ]
   },
   {
