--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -10,17 +10,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0376286e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Age  Gender  Ethnicity  ParentalEducation  StudyTimeWeekly  Absences  \\\n",
+      "0   17       1          0                  2        19.833723         7   \n",
+      "1   18       0          0                  1        15.408756         0   \n",
+      "2   15       0          2                  3         4.210570        26   \n",
+      "3   17       1          0                  3        10.028829        14   \n",
+      "4   17       1          0                  2         4.672495        17   \n",
+      "\n",
+      "   Tutoring  ParentalSupport  Extracurricular  Sports  Music  Volunteering  \\\n",
+      "0         1                2                0       0      1             0   \n",
+      "1         0                1                0       0      0             0   \n",
+      "2         0                2                0       0      0             0   \n",
+      "3         0                3                1       0      0             0   \n",
+      "4         1                3                0       0      0             0   \n",
+      "\n",
+      "        GPA  GradeClass  \n",
+      "0  2.929196         2.0  \n",
+      "1  3.042915         1.0  \n",
+      "2  0.112602         4.0  \n",
+      "3  2.054218         3.0  \n",
+      "4  1.288061         4.0  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "data = pd.read_csv(\"../data/raw/student_performance_data.csv\")\n",
+    "data = pd.read_csv(\"../data/processed/cleaned_data.csv\")\n",
     "\n",
     "# Numerical variables (continuous or discrete without inherent order)\n",
     "numerical_vars = ['StudyTimeWeekly', 'Absences', 'GPA']\n",
@@ -56,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "0155ab5c",
    "metadata": {},
    "outputs": [
