Added logic to remove GPA after feature engineering and started with the modeling

--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "85cefbfa",
    "metadata": {},
    "outputs": [],
@@ -42,12 +42,12 @@
     "- **3: 'D'** (2.0 ≤ GPA < 2.5)  \n",
     "- **4: 'F'** (GPA < 2.0)  \n",
     "\n",
-    "This target variable will be used in our classification models."
+    "This target variable will be used in our classification models and GPA will be removed because it was directly used to create the target variable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "9197edf1",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "4  1.288061           4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,6 +132,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b2b7e518",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🗑️ GPA column dropped.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dropping GPA\n",
+    "df.drop(columns=['GPA'], inplace=True)\n",
+    "print(\"🗑️ GPA column dropped.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "70148213",
    "metadata": {},
@@ -143,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "1db5e1ad",
    "metadata": {},
    "outputs": [
