--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "8ca8f63e",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "ffc5a550",
    "metadata": {},
    "outputs": [
@@ -96,27 +96,37 @@
       "   macro avg      0.714     0.678     0.689       479\n",
       "weighted avg      0.818     0.814     0.815       479\n",
       "\n",
+      "✅ Model saved to: artifacts/logistic_regression.pkl\n",
       "------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "import joblib\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from xgboost import XGBClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "# Common function to train and evaluate a model\n",
-    "def train_and_evaluate(model, X_train, y_train, X_test, y_test, model_name=\"Model\"):\n",
+    "# Ensure artifacts directory exists\n",
+    "os.makedirs(\"artifacts\", exist_ok=True)\n",
+    "\n",
+    "# Common function to train, evaluate and save a model\n",
+    "def train_and_evaluate(model, X_train, y_train, X_test, y_test, model_name=\"lr_model\"):\n",
     "    print(f\"🔍 {model_name}\")\n",
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
     "    print(classification_report(y_test, y_pred, digits=3))\n",
+    "    \n",
+    "    # Save model\n",
+    "    model_path = f\"artifacts/{model_name.replace(' ', '_').lower()}.pkl\"\n",
+    "    joblib.dump(model, model_path)\n",
+    "    print(f\"✅ Model saved to: {model_path}\")\n",
     "    print(\"-\" * 60)\n",
     "\n",
     "# -------------------- 1. Logistic Regression --------------------\n",
     "logreg = LogisticRegression(max_iter=3000, random_state=42)\n",
-    "train_and_evaluate(logreg, X_train, y_train, X_test, y_test, \"Logistic Regression\")"
+    "train_and_evaluate(logreg, X_train, y_train, X_test, y_test, \"Logistic Regression\")\n"
    ]
   },
   {
@@ -470,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fucking_testing",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -484,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
