--- a/notebooks/data_preparation.ipynb
+++ b/notebooks/data_preparation.ipynb
@@ -13,42 +13,12 @@
    "id": "eed0b305",
    "metadata": {},
    "source": [
-    "## Getting the System Ready and Loading the Data (Step 3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fe99168f",
-   "metadata": {},
-   "source": [
-    "### Import Libraries"
+    "## Getting the System Ready and Loading the Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0fae75ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a894a6ba",
-   "metadata": {},
-   "source": [
-    "### Load Raw Data\n",
-    "We load the raw dataset from a CSV file and perform initial cleaning by removing the StudentID column. StudentID is a unique identifier that does not provide predictive value for machine learning, as it has no relationship with student performance or other features. Removing it ensures the dataset focuses on meaningful variables from the start."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e0166a6c",
    "metadata": {},
    "outputs": [
@@ -104,11 +74,13 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
     "# Load the raw dataset\n",
     "data = pd.read_csv(\"../data/raw/student_performance_data.csv\")\n",
-    "\n",
-    "# Remove the StudentID column, as it is a non-predictive unique identifier\n",
-    "data = data.drop(columns=['StudentID'])\n",
     "\n",
     "# Display the first few rows and dataset info to verify the change\n",
     "print(\"First few rows after removing StudentID:\")\n",
@@ -122,7 +94,7 @@
    "id": "1f3b6158",
    "metadata": {},
    "source": [
-    "## Understanding the Data (Step 4)"
+    "## Understanding the Data"
    ]
   },
   {
@@ -365,22 +337,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "f021532f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save the cleaned dataset for future use\n",
-    "data.to_csv(\"../data/processed/cleaned_data.csv\", index=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "14cb08de",
    "metadata": {},
    "source": [
-    "## Missing Value and Outlier Treatment (Step 6)"
+    "## Missing Value and Outlier Treatment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0be70a62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the StudentID column, as it is a non-predictive unique identifier\n",
+    "data = data.drop(columns=['StudentID'])\n",
+    "\n",
+    "# Save the cleaned dataset for future use\n",
+    "data.to_csv(\"../data/processed/cleaned_data.csv\", index=False)"
    ]
   }
  ],
