data preparation notebook update

--- a/notebooks/data_preparation.ipynb
+++ b/notebooks/data_preparation.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e0166a6c",
    "metadata": {},
    "outputs": [
@@ -27,66 +27,39 @@
      "output_type": "stream",
      "text": [
       "First few rows after removing StudentID:\n",
-      "   Age  Gender  Ethnicity  ParentalEducation  StudyTimeWeekly  Absences  \\\n",
-      "0   17       1          0                  2        19.833723         7   \n",
-      "1   18       0          0                  1        15.408756         0   \n",
-      "2   15       0          2                  3         4.210570        26   \n",
-      "3   17       1          0                  3        10.028829        14   \n",
-      "4   17       1          0                  2         4.672495        17   \n",
+      "   StudentID  Age  Gender  Ethnicity  ParentalEducation  StudyTimeWeekly  \\\n",
+      "0       1001   17       1          0                  2        19.833723   \n",
+      "1       1002   18       0          0                  1        15.408756   \n",
+      "2       1003   15       0          2                  3         4.210570   \n",
+      "3       1004   17       1          0                  3        10.028829   \n",
+      "4       1005   17       1          0                  2         4.672495   \n",
       "\n",
-      "   Tutoring  ParentalSupport  Extracurricular  Sports  Music  Volunteering  \\\n",
-      "0         1                2                0       0      1             0   \n",
-      "1         0                1                0       0      0             0   \n",
-      "2         0                2                0       0      0             0   \n",
-      "3         0                3                1       0      0             0   \n",
-      "4         1                3                0       0      0             0   \n",
+      "   Absences  Tutoring  ParentalSupport  Extracurricular  Sports  Music  \\\n",
+      "0         7         1                2                0       0      1   \n",
+      "1         0         0                1                0       0      0   \n",
+      "2        26         0                2                0       0      0   \n",
+      "3        14         0                3                1       0      0   \n",
+      "4        17         1                3                0       0      0   \n",
       "\n",
-      "        GPA  GradeClass  \n",
-      "0  2.929196         2.0  \n",
-      "1  3.042915         1.0  \n",
-      "2  0.112602         4.0  \n",
-      "3  2.054218         3.0  \n",
-      "4  1.288061         4.0  \n",
-      "\n",
-      "Dataset info:\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2392 entries, 0 to 2391\n",
-      "Data columns (total 14 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   Age                2392 non-null   int64  \n",
-      " 1   Gender             2392 non-null   int64  \n",
-      " 2   Ethnicity          2392 non-null   int64  \n",
-      " 3   ParentalEducation  2392 non-null   int64  \n",
-      " 4   StudyTimeWeekly    2392 non-null   float64\n",
-      " 5   Absences           2392 non-null   int64  \n",
-      " 6   Tutoring           2392 non-null   int64  \n",
-      " 7   ParentalSupport    2392 non-null   int64  \n",
-      " 8   Extracurricular    2392 non-null   int64  \n",
-      " 9   Sports             2392 non-null   int64  \n",
-      " 10  Music              2392 non-null   int64  \n",
-      " 11  Volunteering       2392 non-null   int64  \n",
-      " 12  GPA                2392 non-null   float64\n",
-      " 13  GradeClass         2392 non-null   float64\n",
-      "dtypes: float64(3), int64(11)\n",
-      "memory usage: 261.8 KB\n"
+      "   Volunteering       GPA  GradeClass  \n",
+      "0             0  2.929196         2.0  \n",
+      "1             0  3.042915         1.0  \n",
+      "2             0  0.112602         4.0  \n",
+      "3             0  2.054218         3.0  \n",
+      "4             0  1.288061         4.0  \n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
     "# Load the raw dataset\n",
     "data = pd.read_csv(\"../data/raw/student_performance_data.csv\")\n",
     "\n",
     "# Display the first few rows and dataset info to verify the change\n",
     "print(\"First few rows after removing StudentID:\")\n",
-    "print(data.head())\n",
-    "print(\"\\nDataset info:\")\n",
-    "data.info()"
+    "print(data.head())"
    ]
   },
   {
@@ -99,10 +72,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
+   "id": "7356e6ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dataset info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2392 entries, 0 to 2391\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   StudentID          2392 non-null   int64  \n",
+      " 1   Age                2392 non-null   int64  \n",
+      " 2   Gender             2392 non-null   int64  \n",
+      " 3   Ethnicity          2392 non-null   int64  \n",
+      " 4   ParentalEducation  2392 non-null   int64  \n",
+      " 5   StudyTimeWeekly    2392 non-null   float64\n",
+      " 6   Absences           2392 non-null   int64  \n",
+      " 7   Tutoring           2392 non-null   int64  \n",
+      " 8   ParentalSupport    2392 non-null   int64  \n",
+      " 9   Extracurricular    2392 non-null   int64  \n",
+      " 10  Sports             2392 non-null   int64  \n",
+      " 11  Music              2392 non-null   int64  \n",
+      " 12  Volunteering       2392 non-null   int64  \n",
+      " 13  GPA                2392 non-null   float64\n",
+      " 14  GradeClass         2392 non-null   float64\n",
+      "dtypes: float64(3), int64(12)\n",
+      "memory usage: 280.4 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nDataset info:\")\n",
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "f5b03cbb",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dataset Description:\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -135,6 +158,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>StudentID</th>\n",
+       "      <td>2392.0</td>\n",
+       "      <td>2196.500000</td>\n",
+       "      <td>690.655244</td>\n",
+       "      <td>1001.000000</td>\n",
+       "      <td>1598.750000</td>\n",
+       "      <td>2196.500000</td>\n",
+       "      <td>2794.250000</td>\n",
+       "      <td>3392.000000</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>Age</th>\n",
        "      <td>2392.0</td>\n",
@@ -294,46 +328,216 @@
        "</div>"
       ],
       "text/plain": [
-       "                    count       mean       std        min        25%  \\\n",
-       "Age                2392.0  16.468645  1.123798  15.000000  15.000000   \n",
-       "Gender             2392.0   0.510870  0.499986   0.000000   0.000000   \n",
-       "Ethnicity          2392.0   0.877508  1.028476   0.000000   0.000000   \n",
-       "ParentalEducation  2392.0   1.746237  1.000411   0.000000   1.000000   \n",
-       "StudyTimeWeekly    2392.0   9.771992  5.652774   0.001057   5.043079   \n",
-       "Absences           2392.0  14.541388  8.467417   0.000000   7.000000   \n",
-       "Tutoring           2392.0   0.301421  0.458971   0.000000   0.000000   \n",
-       "ParentalSupport    2392.0   2.122074  1.122813   0.000000   1.000000   \n",
-       "Extracurricular    2392.0   0.383361  0.486307   0.000000   0.000000   \n",
-       "Sports             2392.0   0.303512  0.459870   0.000000   0.000000   \n",
-       "Music              2392.0   0.196906  0.397744   0.000000   0.000000   \n",
-       "Volunteering       2392.0   0.157191  0.364057   0.000000   0.000000   \n",
-       "GPA                2392.0   1.906186  0.915156   0.000000   1.174803   \n",
-       "GradeClass         2392.0   2.983696  1.233908   0.000000   2.000000   \n",
+       "                    count         mean         std          min          25%  \\\n",
+       "StudentID          2392.0  2196.500000  690.655244  1001.000000  1598.750000   \n",
+       "Age                2392.0    16.468645    1.123798    15.000000    15.000000   \n",
+       "Gender             2392.0     0.510870    0.499986     0.000000     0.000000   \n",
+       "Ethnicity          2392.0     0.877508    1.028476     0.000000     0.000000   \n",
+       "ParentalEducation  2392.0     1.746237    1.000411     0.000000     1.000000   \n",
+       "StudyTimeWeekly    2392.0     9.771992    5.652774     0.001057     5.043079   \n",
+       "Absences           2392.0    14.541388    8.467417     0.000000     7.000000   \n",
+       "Tutoring           2392.0     0.301421    0.458971     0.000000     0.000000   \n",
+       "ParentalSupport    2392.0     2.122074    1.122813     0.000000     1.000000   \n",
+       "Extracurricular    2392.0     0.383361    0.486307     0.000000     0.000000   \n",
+       "Sports             2392.0     0.303512    0.459870     0.000000     0.000000   \n",
+       "Music              2392.0     0.196906    0.397744     0.000000     0.000000   \n",
+       "Volunteering       2392.0     0.157191    0.364057     0.000000     0.000000   \n",
+       "GPA                2392.0     1.906186    0.915156     0.000000     1.174803   \n",
+       "GradeClass         2392.0     2.983696    1.233908     0.000000     2.000000   \n",
        "\n",
-       "                         50%        75%        max  \n",
-       "Age                16.000000  17.000000  18.000000  \n",
-       "Gender              1.000000   1.000000   1.000000  \n",
-       "Ethnicity           0.000000   2.000000   3.000000  \n",
-       "ParentalEducation   2.000000   2.000000   4.000000  \n",
-       "StudyTimeWeekly     9.705363  14.408410  19.978094  \n",
-       "Absences           15.000000  22.000000  29.000000  \n",
-       "Tutoring            0.000000   1.000000   1.000000  \n",
-       "ParentalSupport     2.000000   3.000000   4.000000  \n",
-       "Extracurricular     0.000000   1.000000   1.000000  \n",
-       "Sports              0.000000   1.000000   1.000000  \n",
-       "Music               0.000000   0.000000   1.000000  \n",
-       "Volunteering        0.000000   0.000000   1.000000  \n",
-       "GPA                 1.893393   2.622216   4.000000  \n",
-       "GradeClass          4.000000   4.000000   4.000000  "
+       "                           50%          75%          max  \n",
+       "StudentID          2196.500000  2794.250000  3392.000000  \n",
+       "Age                  16.000000    17.000000    18.000000  \n",
+       "Gender                1.000000     1.000000     1.000000  \n",
+       "Ethnicity             0.000000     2.000000     3.000000  \n",
+       "ParentalEducation     2.000000     2.000000     4.000000  \n",
+       "StudyTimeWeekly       9.705363    14.408410    19.978094  \n",
+       "Absences             15.000000    22.000000    29.000000  \n",
+       "Tutoring              0.000000     1.000000     1.000000  \n",
+       "ParentalSupport       2.000000     3.000000     4.000000  \n",
+       "Extracurricular       0.000000     1.000000     1.000000  \n",
+       "Sports                0.000000     1.000000     1.000000  \n",
+       "Music                 0.000000     0.000000     1.000000  \n",
+       "Volunteering          0.000000     0.000000     1.000000  \n",
+       "GPA                   1.893393     2.622216     4.000000  \n",
+       "GradeClass            4.000000     4.000000     4.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(\"\\nDataset Description:\")\n",
     "data.describe().T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a16be98f",
+   "metadata": {},
+   "source": [
+    "Missing‐value summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e87b5b2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing = data.isnull().sum()\n",
+    "pct_missing = (missing / len(data) * 100).round(2)\n",
+    "print(\"Missing Values per Column:\")\n",
+    "print(pd.concat([missing, pct_missing.rename('pct')], axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1614f8d7",
+   "metadata": {},
+   "source": [
+    "Duplicate rows check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8dcc8cd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Duplicate rows found: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_dups = data.duplicated().sum()\n",
+    "print(f\"\\nDuplicate rows found: {n_dups}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4feb886a",
+   "metadata": {},
+   "source": [
+    "Unique‐value counts for categoricals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ca04e0e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gender: 2 unique → {1: 1222, 0: 1170}\n",
+      "Ethnicity: 4 unique → {0: 1207, 1: 493, 2: 470, 3: 222}\n",
+      "ParentalEducation: 5 unique → {2: 934, 1: 728, 3: 367, 0: 243, 4: 120}\n",
+      "Tutoring: 2 unique → {0: 1671, 1: 721}\n",
+      "ParentalSupport: 5 unique → {2: 740, 3: 697, 1: 489, 4: 254, 0: 212}\n",
+      "Extracurricular: 2 unique → {0: 1475, 1: 917}\n",
+      "Sports: 2 unique → {0: 1666, 1: 726}\n",
+      "Music: 2 unique → {0: 1921, 1: 471}\n",
+      "Volunteering: 2 unique → {0: 2016, 1: 376}\n",
+      "GradeClass: 5 unique → {4.0: 1211, 3.0: 414, 2.0: 391, 1.0: 269, 0.0: 107}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat_cols = ['Gender','Ethnicity','ParentalEducation',\n",
+    "            'Tutoring','ParentalSupport','Extracurricular',\n",
+    "            'Sports','Music','Volunteering','GradeClass']\n",
+    "for col in cat_cols:\n",
+    "    print(f\"{col}: {data[col].nunique()} unique → {data[col].value_counts().to_dict()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51391eb0",
+   "metadata": {},
+   "source": [
+    "Outlier detection via IQR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "34b936fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Outlier Summary:\n",
+      "              feature  n_outliers  lower_bound  upper_bound\n",
+      "0           StudentID           0  -194.500000  4587.500000\n",
+      "1                 Age           0    12.000000    20.000000\n",
+      "2              Gender           0    -1.500000     2.500000\n",
+      "3           Ethnicity           0    -3.000000     5.000000\n",
+      "4   ParentalEducation         120    -0.500000     3.500000\n",
+      "5     StudyTimeWeekly           0    -9.004916    28.456405\n",
+      "6            Absences           0   -15.500000    44.500000\n",
+      "7            Tutoring           0    -1.500000     2.500000\n",
+      "8     ParentalSupport           0    -2.000000     6.000000\n",
+      "9     Extracurricular           0    -1.500000     2.500000\n",
+      "10             Sports           0    -1.500000     2.500000\n",
+      "11              Music         471     0.000000     0.000000\n",
+      "12       Volunteering         376     0.000000     0.000000\n",
+      "13                GPA           0    -0.996316     4.793335\n",
+      "14         GradeClass           0    -1.000000     7.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeric_cols = data.select_dtypes(include=[np.number]).columns\n",
+    "outlier_summary = []\n",
+    "for col in numeric_cols:\n",
+    "    Q1 = data[col].quantile(0.25)\n",
+    "    Q3 = data[col].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower, upper = Q1 - 1.5 * IQR, Q3 + 1.5 * IQR\n",
+    "    mask = (data[col] < lower) | (data[col] > upper)\n",
+    "    outlier_count = mask.sum()\n",
+    "    outlier_summary.append((col, outlier_count, lower, upper))\n",
+    "outlier_df = pd.DataFrame(outlier_summary,\n",
+    "                          columns=['feature','n_outliers','lower_bound','upper_bound'])\n",
+    "print(\"\\nOutlier Summary:\")\n",
+    "print(outlier_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "050db7fa",
+   "metadata": {},
+   "source": [
+    "Skewness & kurtosis for numeric features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e67dbed4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skew_kurt = pd.DataFrame({\n",
+    "    'skewness': data[numeric_cols].skew(),\n",
+    "    'kurtosis': data[numeric_cols].kurtosis()\n",
+    "}).round(2)\n",
+    "print(\"\\nSkewness & Kurtosis:\")\n",
+    "print(skew_kurt)"
    ]
   },
   {
@@ -345,17 +549,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f412046",
+   "metadata": {},
+   "source": [
+    "Remove the StudentID column, as it is a non-predictive unique identifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0be70a62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student ID dropped successfully\n"
+     ]
+    }
+   ],
    "source": [
-    "# Remove the StudentID column, as it is a non-predictive unique identifier\n",
+    "# Remove the StudentID column\n",
     "data = data.drop(columns=['StudentID'])\n",
-    "\n",
+    "print(\"Student ID dropped successfully\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cd25e35",
+   "metadata": {},
+   "source": [
+    "# Save Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "496c1b66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Saved Successfully\n"
+     ]
+    }
+   ],
+   "source": [
     "# Save the cleaned dataset for future use\n",
-    "data.to_csv(\"../data/processed/cleaned_data.csv\", index=False)"
+    "data.to_csv(\"../data/processed/cleaned_data.csv\", index=False)\n",
+    "print(\"Dataset Saved Successfully\")"
    ]
   }
  ],
