updated data preparation

--- a/notebooks/data_preparation.ipynb
+++ b/notebooks/data_preparation.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "e0166a6c",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "7356e6ee",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "f5b03cbb",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
        "GradeClass            4.000000     4.000000     4.000000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,10 +383,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "e87b5b2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing Values per Column:\n",
+      "                   0  pct\n",
+      "StudentID          0  0.0\n",
+      "Age                0  0.0\n",
+      "Gender             0  0.0\n",
+      "Ethnicity          0  0.0\n",
+      "ParentalEducation  0  0.0\n",
+      "StudyTimeWeekly    0  0.0\n",
+      "Absences           0  0.0\n",
+      "Tutoring           0  0.0\n",
+      "ParentalSupport    0  0.0\n",
+      "Extracurricular    0  0.0\n",
+      "Sports             0  0.0\n",
+      "Music              0  0.0\n",
+      "Volunteering       0  0.0\n",
+      "GPA                0  0.0\n",
+      "GradeClass         0  0.0\n"
+     ]
+    }
+   ],
    "source": [
     "missing = data.isnull().sum()\n",
     "pct_missing = (missing / len(data) * 100).round(2)\n",
@@ -404,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "8dcc8cd3",
    "metadata": {},
    "outputs": [
@@ -432,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "ca04e0e9",
    "metadata": {},
    "outputs": [
@@ -471,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "34b936fc",
    "metadata": {},
    "outputs": [
@@ -527,10 +551,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "e67dbed4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Skewness & Kurtosis:\n",
+      "                   skewness  kurtosis\n",
+      "StudentID              0.00     -1.20\n",
+      "Age                    0.04     -1.37\n",
+      "Gender                -0.04     -2.00\n",
+      "Ethnicity              0.76     -0.77\n",
+      "ParentalEducation      0.22     -0.29\n",
+      "StudyTimeWeekly        0.05     -1.14\n",
+      "Absences              -0.03     -1.18\n",
+      "Tutoring               0.87     -1.25\n",
+      "ParentalSupport       -0.17     -0.72\n",
+      "Extracurricular        0.48     -1.77\n",
+      "Sports                 0.86     -1.27\n",
+      "Music                  1.53      0.33\n",
+      "Volunteering           1.88      1.55\n",
+      "GPA                    0.01     -0.86\n",
+      "GradeClass            -0.90     -0.42\n"
+     ]
+    }
+   ],
    "source": [
     "skew_kurt = pd.DataFrame({\n",
     "    'skewness': data[numeric_cols].skew(),\n",
@@ -558,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "0be70a62",
    "metadata": {},
    "outputs": [
@@ -586,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "496c1b66",
    "metadata": {},
    "outputs": [
